--- a/public/index.html
+++ b/public/index.html
@@ -83,47 +83,18 @@
           </div>
         </form>
       </section>
+      <!-- display/hide err msg -->
+      <section class="error-section">
+        <p id="error-message">
+          <i class="fas fa-exclamation-triangle"></i>
+
+          <i class="fas fa-exclamation-triangle"></i>
+
+        </p>
+      </section class="error-section">
+
       <!-- new tweet display -->
-
       <section id="tweet-container"> 
-        <!-- <div class="tweet-container">
-        <article clss="article-class">
-          <heaer>
-            <div css="avatar-pic">
-              <img src="https://i.imgur.com/73hZDYK.png" alt="">
-              <p>Newton</p>
-            </div>            
-            <div class="name">
-              <p>@SirIsaac</p>
-            </div>
-          </header>
-          
-          <div class="posted-tweet">
-            <p>If I have seen further it is by standing on the shoulders of giants</p>
-            <hr>
-          </div>
-
-          <footer>
-            <div class="posted-on">
-              <p>10 days ago</p>
-            </div>
-
-            <div class="flag-retweet-like">
-              <span class="icon flag">
-                <i class="fas fa-flag"></i>
-              </span>
-              <span class="icon retweet">
-                <i class="fas fa-retweet"></i>
-              </span>
-              <span class="icon like">
-                <i class="fas fa-heart"></i>
-              </span>
-            </div>
-          </footer>
-
-        </article>
-      </div> -->
-
       </section>
 
 
